[package]
name = "bread-dog"
version = "0.1.1-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking" ] }
dialoguer = "0.10"
dirs-next = "2.0"
