[package]
name = "bread-dog"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.10"
dirs-next = "2.0"
once_cell = "1.17"
ureq = { version = "2.6", features = ["json"] }
ctrlc = "3.2"
