[package]
name = "bread-dog"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A menu-driven proxy server switcher for Clash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.11"
dirs-next = "2.0"
once_cell = "1.17"
ureq = { version = "2.6", features = ["json"] }
ctrlc = "3.2"
owo-colors = "4.0"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
